-removed outset box shadow from inset panels -fixed file explorer item tooltip generation -fixed missing settings panel gap

--- a/styling/styles-pages.css
+++ b/styling/styles-pages.css
@@ -382,6 +382,7 @@
 .page-panel.inset-box
 {
 	border: none;
+	box-shadow: none;
 	background-color: hsl(from var(--theme-color) h s 12%);
 }
 
